# AutoDeafen-macOS

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
src/: ConfigPopup.hpp  DiscordIPC.cpp  DiscordIPC.hpp  LevelConfig.hpp  OAuthServer.cpp  OAuthServer.hpp  main.cpp
